# tts_uart

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: args.rs  main.rs  snr9816.rs
