[package]
name = "tts_uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio-serial = "5.4.4"
clap = { version = "4.4.18", features = ["derive"] }
encoding_rs = "0.8.33"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_urlencoded = "0.7"
log = "0.4.20"
env_logger = "0.11.1"
